# cogni

./: .env.example  .gitignore  BENCHMARKS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  baseline.json  benchmark_suite.py  regression.py
docs/: benchmark.md  code-reference.md  data-flow.md  metrics-reference.md  scenarios.md
examples/: architecture_comparison.yaml  custom_archetype.py  quickstart.py  reproduce_paper.ipynb  run_experiment.py  social_dynamics_experiment.yaml  trait_evolution_study.yaml
experiments/: example_architecture.yaml
experiments/alignment/: 01_value_drift_contagion.yaml  02_cooperation_collapse.yaml  03_architecture_resilience.yaml  04_minority_influence.yaml  05_recovery_after_collapse.yaml  06_minority_fine_sweep.yaml  07_corruption_dynamics.yaml  08_multi_trait_corruption.yaml  README.md  (+7 more)
plugins/: aggressive_raider.py  example_strategy.py  social_diplomat.py
scripts/: analyze_overnight.py  assemble_dataset.py  backfill_catalog.py  push_to_hf.py  run_overnight.py  validate_data_richness.py  verify_metrics.py
src/: __init__.py  config.py  errors.py  main.py
tests/: conftest.py  helpers.py  test_actions.py  test_additions.py  test_agents.py  test_analysis.py  test_architecture.py  test_awareness.py  test_benchmark_cli.py  test_benchmark_help.py  test_benchmarks.py  test_catalog.py  test_coalition.py  test_communication.py  test_cultural_phase2.py  test_e2e_visualization.py  test_emergence.py  test_engine.py  test_entities.py  test_error_handling.py  test_errors.py  test_evolution.py  test_experiments.py  test_integration.py  test_language_phase4.py  test_llm_context.py  test_llm_parser.py  test_llm_prompts.py  test_llm_strategy.py  test_metacognition_phase3.py  test_parquet.py  test_persistence.py  test_phase_1_1.py  test_phenomena.py  test_planning.py  test_plugins.py  test_provenance.py  test_query.py  test_realtime.py  test_registry.py  (+7 more)
(+189 files in other folders)
