[project]
name = "cogniarch"
version = "0.1.0"
description = "Pluggable cognitive architecture framework for multi-agent simulation and alignment research"
readme = "README.md"
license = "MIT"
authors = [{name = "Jeyasri Nagarajan"}]
keywords = ["cognitive-architecture", "multi-agent", "simulation", "alignment", "SRIE"]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.0",
    "httpx>=0.27",
    "websockets>=13.0",
    "types-PyYAML>=6.0",
]
live = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
]
hf = [
    "huggingface_hub>=0.20",
]
data = [
    "pyarrow>=14.0",
    "duckdb>=0.10",
]

[project.scripts]
cogniarch = "src.main:main"

[project.urls]
Homepage = "https://github.com/upcomingsimplecoder/cogni"
Repository = "https://github.com/upcomingsimplecoder/cogni"
Documentation = "https://github.com/upcomingsimplecoder/cogni"
Issues = "https://github.com/upcomingsimplecoder/cogni/issues"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
